# nordic-power-terminal

./: .gitignore  LICENSE  README.md  dashboard.py  pyproject.toml
src/nordic_power_terminal.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/npt/: cli.py  settings.py
src/npt/backtest/: walk_forward.py
src/npt/data/: transform.py
src/npt/data/connectors/: hvakosterstrommen.py
src/npt/data/storage/: duckdb_store.py
tests/: conftest.py  test_duckdb_store.py  test_hvakosterstrommen_url.py  test_smoke.py  test_transform.py  test_walk_forward.py
